[package]
name = "kazyol_chat"
description = "Minecraft JSON chat format structs"
homepage = "https://github.com/Iaiao/KazyolChat#readme"
repository = "https://github.com/Iaiao/KazyolChat"
readme = "README.md"
license = "MIT"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = [ "derive" ] }
serde_json = "1.0.61"
derive_builder = "0.10.0-alpha"
